# winter

./: .gitignore  LICENSE  rustfmt.toml
.github/workflows/: ci.yml
crates/winter_core/: Cargo.toml
crates/winter_core/src/: lib.rs
crates/winter_core/src/parse/: mod.rs
crates/winter_core/src/parse/instructions/: control.rs  expr.rs  mod.rs
crates/winter_core/src/parse/modules/: indices.rs  mod.rs  sections.rs
crates/winter_core/src/parse/modules/sections/: code_section.rs  custom_section.rs  data_count_section.rs  data_section.rs  element_section.rs  export_section.rs  function_section.rs  global_section.rs  import_section.rs  memory_section.rs  module.rs  start_section.rs  table_section.rs  type_section.rs
crates/winter_core/src/parse/types/: functype.rs  globaltype.rs  limits.rs  mod.rs  numtype.rs  reftype.rs  resulttype.rs  tabletype.rs  valtype.rs
crates/winter_core/src/parse/values/: leb128.rs  mod.rs  name.rs  vec.rs
